= Federales - Shoes 3.2

=== New with 3.2.23
   * snapshot works like image - it collects effects and drawings and 
     writes them to a file (pdf, svg or ps)
   * discovered a skew method. 
   * Cobbler gets a couple of new buttons to show the manual or splash.
   * Windows: cmd line user packaged app can have a console window.
     #110
   
=== Fixed with 3.2.23

=== Developer improvements
   * platform specific extconf.rb files
   * add PackShoes.make_shy method and wiki article
     https://github.com/Shoes3/shoes3/wiki/Command-line-packager
   

== Mar 26, 2015
=== New with 3.2.22
  * Discovered a Slider widget (Shoes element) that no one documented. 
    https://github.com/Shoes3/shoes3/issues/88
  * Documented image effects. Cool stuff that was mostly unknown.
    https://github.com/Shoes3/shoes3/issues/83
  * Added (minimal) documentation for fullscreen, set_window_title, 
    set_window_icon_path for special situations.
  * Enabled Gtk2 theme engine on Windows. Better looking UI. Can be 
    changed by a knowledable user. 
    https://github.com/Shoes3/shoes3/issues/24
  * The Ruby included with Shoes doesn't have ancient gdbm compatabibility 
    It's a feature you probably don't care about. 
    https://github.com/Shoes3/shoes3/issues/84
  * alert, ask, confirm dialogs can change the "Shoes says" and "Shoes asks"
    title string to a user given string (or default) on to none at all.
    https://github.com/Shoes3/shoes3/issues/59
    
=== Bugs fixed in 3.2.22
  * Fixed a crash in samples/simple-sphere.rb when running on 64 bit 
    systems. 
    https://github.com/Shoes3/shoes3/issues/9
  * OSX: edit_lines would screw up the appearance of later elements
    https://github.com/Shoes3/shoes3/issues/7
  * Windows: Cleaned up many font problems and console warnings.
    https://github.com/Shoes3/shoes3/issues/69
    https://github.com/Shoes3/shoes3/issues/78
    https://github.com/Shoes3/shoes3/issues/48
  * OSX: Radio Buttons (and groups of) now work.