@@ -7,6 +7,8 @@
    * Cobbler gets a couple of new buttons to show the manual or splash.
    * Windows: cmd line user packaged app can have a console window.
      #110
+   * Changes to gems - nokogiri replaces 'hpricot'
+   * 
    
 === Fixed with 3.2.23
 
@@ -14,6 +16,10 @@
    * platform specific extconf.rb files
    * add PackShoes.make_shy method and wiki article
      https://github.com/Shoes3/shoes3/wiki/Command-line-packager
+   * separate compiling gems (more of a ruby thing) and copying gems
+     which is what Shoes now. Lots of changes to rakefiles. 
+   * Command line jock's can create platfrom specific pre-compiled binary
+     gems that Cobbler can load. 
    
 
 == Mar 26, 2015
